matrix-multiplication/benchmark_20260426_072959.txt
Output file: /workspaces/fix-resume-works/matrix-multiplication/benchmark_20260426_072959.txt
Started at: 2026-04-26 07:29:59
i-j-k: 0.502286 seconds

real	0m0.529s
user	0m0.504s
sys	0m0.024s
i-j-k: 0.504888 seconds

 Performance counter stats for '/workspaces/fix-resume-works/matrix-multiplication/matmul_ijk':

         278990940      cache-references                                                      
           5182700      cache-misses                     #    1.86% of all cache refs         
        2628014866      instructions                     #    1.21  insn per cycle            
        2163733356      cycles                                                                

       0.534767527 seconds time elapsed

       0.514596000 seconds user
       0.020101000 seconds sys


/workspaces/fix-resume-works/matrix-multiplication/matmul_ikj.cpp:23:15: error: use of undeclared identifier 'i'
   23 |             B[i][j] = (double)(i - j + N) / N;
      |               ^
/workspaces/fix-resume-works/matrix-multiplication/matmul_ikj.cpp:23:18: error: use of undeclared identifier 'j'
   23 |             B[i][j] = (double)(i - j + N) / N;
      |                  ^
/workspaces/fix-resume-works/matrix-multiplication/matmul_ikj.cpp:23:32: error: use of undeclared identifier 'i'
   23 |             B[i][j] = (double)(i - j + N) / N;
      |                                ^
/workspaces/fix-resume-works/matrix-multiplication/matmul_ikj.cpp:23:36: error: use of undeclared identifier 'j'
   23 |             B[i][j] = (double)(i - j + N) / N;
      |                                    ^
/workspaces/fix-resume-works/matrix-multiplication/matmul_ikj.cpp:24:15: error: use of undeclared identifier 'i'
   24 |             C[i][j] = 0.0;
      |               ^
/workspaces/fix-resume-works/matrix-multiplication/matmul_ikj.cpp:24:18: error: use of undeclared identifier 'j'
   24 |             C[i][j] = 0.0;
      |                  ^
6 errors generated.
